src/objects/collect__Collection_Configuration_Actions__c.object
<CustomObject>
    <fields>
        <fullName>collect__Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__Collection_Configuration__c</fullName>
        <label>Collection Configuration</label>
        <referenceTo>collect__Collection_Configuration__c</referenceTo>
        <relationshipLabel>Collection Configuration Actions</relationshipLabel>
        <relationshipName>Collection_Configuration_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>collect__Comments__c</fullName>
        <label>Comments</label>
        <picklist>
            <picklistValues>
                <fullName>Simple reminder advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact &amp; obtain arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconfirm payment arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calls daily till arrangement obtained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issued if applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further fees and adverse credit pending Issued if applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation due to days overdue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration</label>
        <referenceTo>cnotify__Configuration__c</referenceTo>
        <relationshipLabel>Collection Configuration Actions</relationshipLabel>
        <relationshipName>Collection_Configuration_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Days_in_Arrear__c</fullName>
        <label>Days in Arrear</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Dunning_Letter_Id__c</fullName>
        <label>Dunning Letter Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Collection Configuration Action</label>
    <nameField>
        <displayFormat>CCN-{00000000}</displayFormat>
        <label>Collection Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Configuration Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>